--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
     "name": "baklavajs-monorepo",
+    "version": "2.7.0",
+    "description": "BaklavaJS - A visual node editor for the web",
+    "author": "newcat <freddy.wagner@web.de>",
     "private": true,
     "type": "module",
     "scripts": {
@@ -11,13 +14,21 @@
         "generate-api-docs": "typedoc",
         "docs:dev": "vitepress dev docs",
         "docs:build": "vitepress build docs",
-        "version": "yarn install && git stage yarn.lock"
+        "version": "yarn install && git stage yarn.lock",
+        "electron": "electron electron/main.js",
+        "electron:dev": "NODE_ENV=development electron electron/main.js",
+        "electron:pack": "electron-builder",
+        "electron:dist": "yarn build && electron-builder",
+        "build:electron": "cd packages/renderer-vue && yarn build && cd ../.. && electron-builder"
     },
     "workspaces": [
         "packages/*"
     ],
     "devDependencies": {
         "@eslint/js": "^9.27.0",
+        "electron": "^37.4.0",
+        "electron-builder": "^26.0.12",
+        "electron-packager": "^17.1.2",
         "eslint": "^9.27.0",
         "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-vue": "^10.1.0",
@@ -32,5 +43,37 @@
         "vitepress": "^1.6.3",
         "vue-eslint-parser": "^10.1.3"
     },
-    "packageManager": "yarn@3.5.1"
+    "packageManager": "yarn@3.5.1",
+    "main": "electron/main.cjs",
+    "homepage": "./",
+    "build": {
+        "appId": "com.baklavajs.app",
+        "productName": "BaklavaJS",
+        "directories": {
+            "output": "build-output"
+        },
+        "files": [
+            "electron/**/*",
+            "packages/renderer-vue/dist/**/*",
+            "packages/core/dist/**/*",
+            "packages/events/dist/**/*",
+            "packages/themes/dist/**/*"
+        ],
+        "win": {
+            "target": "nsis",
+            "icon": "electron/assets/icon.ico"
+        },
+        "nsis": {
+            "oneClick": false,
+            "allowToChangeInstallationDirectory": true
+        },
+        "mac": {
+            "target": "dmg",
+            "icon": "electron/assets/icon.icns"
+        },
+        "linux": {
+            "target": "AppImage",
+            "icon": "electron/assets/icon.png"
+        }
+    }
 }
