refactor(clipboard): 替换全局剪贴板为系统剪贴板实现
- 移除基于 localStorage 的跨标签页剪贴板功能
- 实现基于 navigator.clipboard 的系统剪贴板支持
- 添加 AJV 验证确保剪贴板数据格式正确
- 更新相关文档和示例代码

--- a/packages/renderer-vue/package.json
+++ b/packages/renderer-vue/package.json
@@ -34,7 +34,8 @@
     },
     "dependencies": {
         "@baklavajs/core": "^2.7.0",
-        "@baklavajs/events": "^2.7.0"
+        "@baklavajs/events": "^2.7.0",
+        "ajv": "^8.17.1"
     },
     "devDependencies": {
         "@types/resize-observer-browser": "^0.1.11",
